# lamprep

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/superpowers/specs/: 2026-03-30-lammps-setup-generator-design.md
docs/test-plans/: human-verification-issue.md
src/lamprep/: __init__.py  __main__.py  cli.py  specs.py
src/lamprep.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/lamprep/manual_registry/: __init__.py  base.py  v11Feb2026.py  v29Aug2024.py
tests/integration/: README.md  scenarios_v1.json  test_prompt_flows.py  test_scenarios_schema.py
tests/unit/: test_manual_registry.py  test_specs.py
