[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lamprep"
version = "0.1.0"
description = "Version-pinned LAMMPS input preparation toolkit"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Qiushan Huang" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
lamprep = "lamprep.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
